Bug 244817 - Unreviewed PlayStation build fix following 254157@main
Summary: Unreviewed PlayStation build fix following 254157@main
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ross Kirsling
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-09-05 11:37 PDT by Ross Kirsling
Modified: 2022-09-05 11:42 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ross Kirsling 2022-09-05 11:37:17 PDT
Unreviewed PlayStation build fix following 254157@main
Comment 1 Ross Kirsling 2022-09-05 11:38:07 PDT
Pull request: https://github.com/WebKit/WebKit/pull/4037
Comment 2 EWS 2022-09-05 11:41:57 PDT
Committed 254167@main (c3594bca5d3f): <https://commits.webkit.org/254167@main>

Reviewed commits have been landed. Closing PR #4037 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2022-09-05 11:42:15 PDT
<rdar://problem/99573900>