Unreviewed PlayStation build fix following 254157@main https://bugs.webkit.org/show_bug.cgi?id=244817

* Source/WebKit/UIProcess/Launcher/playstation/ProcessLauncherPlayStation.cpp:
(WebKit::ProcessLauncher::launchProcess):

Canonical link: https://commits.webkit.org/254167@main